tests/errors/match_invalid_variant.bs
// Error test: Invalid variant name in pattern
Option :: variant {
    Some { value int }
    None
}

fn test(Option o) int {
    return match o {
        Option.Invalid -> 0
    }
}
